2004-01-09  Jon K Hellan  <hellan@acm.org>

	* modulesets/gnome26.modules: Added libxklavier dependency for
	gnome-applets. http://bugzilla.gnome.org/show_bug.cgi?id=130972.

2004-01-08  Sri Ramkrishna  <sri@aracnet.com>

	* modulesets/gnome26.modules: added gst-plugin dependency for acme
                                fixes bug #130865

2004-01-08  Christophe Fergeau  <teuf@gnome.org>

	* modulesets/gnome22.modules
	* modulesets/gnome24.modules
	* modulesets/gnome26.modules: removed gnet dependency for gnomeicu

Thu Jan  8 16:22:01 2004  Jonathan Blandford  <jrb@gnome.org>

	* modulesets/gnome26.modules: dependency on shared-mime-info.

Wed Jan  7 13:45:34 2004  Jonathan Blandford  <jrb@gnome.org>

	* modulesets/gnome26.modules: I was convinced by Alex to merge to
	HEAD.  MIME_REWRITE branch is no more.

2004-01-08  Luis Villa <louie@ximian.com>

	* modulsets/gnome26.modules: update to xchat 2.0.7
	
Wed Jan  7 03:18:27 2004  Jonathan Blandford  <jrb@gnome.org>

	* modulesets/gnome26.modules: move to the MIME_REWRITE branch

2004-01-05  Jonathan Blandford  <jrb@redhat.com>

	* modulesets/freedesktop.modules: add shared-mime-info

2003-12-30  Thomas Vander Stichele  <thomas at apestaart dot org>

	* modulesets/gnome26.modules: update scrollkeeper version to 0.3.14,
          which fixes the hardcoding of ${prefix}/var/log/scrollkeeper.log
          as the logfile

2003-12-22  Alex Duggan  <aldug@astrolinux.com>

	* modulesets/gnome26.modules: Removed duplicate gtkhtml dependency
	for evolution

2003-12-22  Thomas Vander Stichele  <thomas at apestaart dot org>

	* modulesets/gnome26.modules: Moved GStreamer CVS to freedesktop

2003-12-19  Murray Cumming  <murrayc@usa.net>

	* modulesets/gnome26.modules: libxml++ has moved to the GNOME cvs.

2003-12-17  James Henstridge  <james@daa.com.au>

	* bootstrap.py (bootstraps): change back to getting libtool from
	gnu.org, since it is up again.  Update Autoconf to 2.59,
	Automake-1.7 to 1.7.9 and add Automake-1.8.
