@@ -185,9 +185,9 @@ bootstraps = [
               577705,
               [],
               'automake-1.7 --version | head -1'),
-    Bootstrap('automake-1.8', '1.8',
-              'http://ftp.gnu.org/gnu/automake/automake-1.8.tar.bz2',
-              711393,
+    Bootstrap('automake-1.8', '1.8.1',
+              'http://ftp.gnu.org/gnu/automake/automake-1.8.1.tar.bz2',
+              638621,
               [],
               'automake-1.8 --version | head -1'),
     Bootstrap('pkg-config', '0.15.0',
