@@ -1,3 +1,7 @@
+2004-01-12  James Henstridge  <james@daa.com.au>
+
+	* bootstrap.py (automake-1.8): update to 1.8.1.
+
 2004-01-09  Jon K Hellan  <hellan@acm.org>
 
 	* modulesets/gnome26.modules: Added libxklavier dependency for
